style.css
@import url('https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: gray;
    height: 100vh;
}

.sketch-container {
    height: 100%;
    border: 120px solid darkred;
    border-top: none;
    border-bottom: none;

}

#title {
    font-family: "Pinyon Script", sans-serif;
    font-size: 24px;
    letter-spacing: 4px;
    text-align: center;
    background-color: darkred;
    color: yellow;
    padding: 25px;
}

.sketch-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 535px;
}

.grid-size {
    border: none;
    margin: 10px;
}

.grid-container {
    height: 480px;
    width: 480px;
    display: flex;
}

.grid-column {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.grid-row {
    flex: 1;
    border: 1px solid black;
}

.color-mode {
    display: flex;
    justify-content: space-between;
    background-color: darkred;
    height: 130px;
}

.color-mode label {
    color: #fdfdfd;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 8px;
}

.color-picker,
.rainbow-mode {
    width: 80px;
    height: 80px;
    border: 1px solid white;
    border-radius: 50%;
}

.rainbow-mode {
    background-color: black;
}

